# refraction-DVR

./: CMakeLists.txt  animeEvents.cpp  animeEvents.h  casting.cpp  casting.h  gpuSetting.cpp  gpuSetting.h  gradient.cpp  gradient.h  lightPropergation.cpp  lightPropergation.h  lightSetting.cpp  lightSetting.h  main.cpp  myMath.cpp  myMath.h  objectData.cpp  objectData.h  render.cpp  render.h  variables.cpp  variables.h  vector.cpp  vector.h  visualize.cpp  visualize.h
cmake-modules/: FindOpenCV.cmake
